<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="436dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.648">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="130dp"
                android:layout_height="98dp"
                android:contentDescription="@string/string_imagedescription"
                app:srcCompat="@mipmap/iphoto"
                tools:layout_editor_absoluteX="254dp"
                tools:layout_editor_absoluteY="421dp" />

            <EditText
                android:id="@+id/edit_Nom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_x="77dp"
                android:layout_y="193dp"
                android:autofillHints="Pseudo"
                android:ems="10"
                android:hint="@string/string_lastname"
                android:imeOptions="actionDone"
                android:inputType="textCapCharacters|textPersonName"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.408"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.249" />

            <EditText
                android:id="@+id/edit_Prenom"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_x="78dp"
                android:layout_y="137dp"
                android:autofillHints="Password"
                android:ems="10"
                android:hint="@string/string_username"
                android:imeOptions="actionDone"
                android:inputType="textCapWords|textPersonName"
                android:textAlignment="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.408"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333" />

            <EditText
                android:id="@+id/edit_Email"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp"
                android:layout_x="76dp"
                android:layout_y="250dp"
                android:autofillHints="Password"
                android:clickable="false"
                android:contextClickable="false"
                android:ems="10"
                android:hint="@string/string_email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:textAlignment="textStart"
                app:layout_constraintHorizontal_bias="0.408"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.449" />

            <RadioGroup
                android:id="@+id/RGroupSexe"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_x="111dp"
                android:layout_y="304dp"
                android:checkedButton="@+id/rFemale"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.578">

                <RadioButton
                    android:id="@+id/rMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_x="78dp"
                    android:layout_y="308dp"
                    android:text="@string/string_male"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="83dp"
                    tools:layout_editor_absoluteY="315dp" />

                <RadioButton
                    android:id="@+id/rFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_x="191dp"
                    android:layout_y="309dp"
                    android:text="@string/string_female"
                    tools:layout_editor_absoluteX="199dp"
                    tools:layout_editor_absoluteY="315dp" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cLanguage4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_language4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.563"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.727" />

                <CheckBox
                    android:id="@+id/cLanguage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_language2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.559"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.648" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cLanguage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_language1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.344"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.648" />

                <CheckBox
                    android:id="@+id/cLanguage3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_language3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.353"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.727" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_Hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/string_nbrhours"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/bReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_reset"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="473dp" />

            <Button
                android:id="@+id/bOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/string_validate" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tDateView"
        android:layout_width="89dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_x="273dp"
        android:layout_y="525dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <TextView
        android:id="@+id/text_Titre"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_x="3dp"
        android:layout_y="60dp"
        android:clickable="false"
        android:text="@string/string_name"
        android:textAlignment="center"
        android:visibility="visible"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>